--- a/Mini project1(Jackfruit problem).ipynb
+++ b/Mini project1(Jackfruit problem).ipynb
@@ -51,20 +51,38 @@
     "    messagebox.showinfo(\"Saved\", \"Grayscale image saved as grayscale_output.jpg\")\n",
     "\n",
     "\n",
-    "def dominant_color():\n",
-    "    if img is None:\n",
-    "        messagebox.showerror(\"Error\", \"No image loaded!\")\n",
-    "        return\n",
-    "\n",
-    "    img_rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
-    "    pixels = img_rgb.reshape((-1, 3)).astype(np.float32)\n",
-    "    criteria = (cv2.TERM_CRITERIA_EPS + cv2.TERM_CRITERIA_MAX_ITER, 20, 0.2)\n",
-    "    _, labels, centers = cv2.kmeans(pixels, 3, None, criteria, 10, cv2.KMEANS_RANDOM_CENTERS)\n",
-    "    centers = np.uint8(centers)\n",
-    "    counts = np.bincount(labels.flatten())\n",
-    "    dominant = centers[np.argmax(counts)]\n",
-    "\n",
-    "    messagebox.showinfo(\"Dominant Color\", f\"Dominant Color (R,G,B): {tuple(dominant)}\")\n",
+    def dominant_color():
+    if img is None:
+        messagebox.showerror("Error", "No image loaded!")
+        return
+
+    img_rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)
+    pixels = img_rgb.reshape((-1, 3)).astype(np.float32)
+
+    criteria = (
+        cv2.TERM_CRITERIA_EPS + cv2.TERM_CRITERIA_MAX_ITER,
+        20,
+        0.2
+    )
+
+    _, labels, centers = cv2.kmeans(
+        pixels,
+        3,
+        None,
+        criteria,
+        10,
+        cv2.KMEANS_RANDOM_CENTERS
+    )
+
+    centers = np.uint8(centers)
+    counts = np.bincount(labels.flatten())
+    dominant = centers[np.argmax(counts)]
+
+    messagebox.showinfo(
+        "Dominant Color",
+        f"Dominant Color (R,G,B): {tuple(dominant)}"
+    )
+,
     "\n",
     "\n",
     "# ----------------- GUI Setup -----------------\n",
