--- a/Mini project1(Jackfruit problem).ipynb
+++ b/Mini project1(Jackfruit problem).ipynb
@@ -58,13 +58,27 @@
     "\n",
     "    img_rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
     "    pixels = img_rgb.reshape((-1, 3)).astype(np.float32)\n",
-    "    criteria = (cv2.TERM_CRITERIA_EPS + cv2.TERM_CRITERIA_MAX_ITER, 20, 0.2)\n",
-    "    _, labels, centers = cv2.kmeans(pixels, 3, None, criteria, 10, cv2.KMEANS_RANDOM_CENTERS)\n",
+    "    criteria = (\n",
+    "        cv2.TERM_CRITERIA_EPS + cv2.TERM_CRITERIA_MAX_ITER,\n",
+    "        20,\n",
+    "        0.2,\n",
+    "    )\n",
+    "    _, labels, centers = cv2.kmeans(\n",
+    "        pixels,\n",
+    "        3,\n",
+    "        None,\n",
+    "        criteria,\n",
+    "        10,\n",
+    "        cv2.KMEANS_RANDOM_CENTERS,\n",
+    "    )\n",
     "    centers = np.uint8(centers)\n",
     "    counts = np.bincount(labels.flatten())\n",
     "    dominant = centers[np.argmax(counts)]\n",
     "\n",
-    "    messagebox.showinfo(\"Dominant Color\", f\"Dominant Color (R,G,B): {tuple(dominant)}\")\n"
+    "    messagebox.showinfo(\n",
+    "        \"Dominant Color\",\n",
+    "        f\"Dominant Color (R,G,B): {tuple(dominant)}\",\n",
+    "    )\n"
 ,
     "\n",
     "\n",
