Fix messagebox info display for grayscale image

--- a/Mini project1(Jackfruit problem).ipynb
+++ b/Mini project1(Jackfruit problem).ipynb
@@ -50,9 +50,10 @@
     "\n",
     "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "    cv2.imwrite(\"grayscale_output.jpg\", gray)\n",
-    "    messagebox.showinfo(\"Saved\", \"Grayscale image saved as grayscale_output.jpg\")\n",
+    "    messagebox.showinfo(\"Grayscale image saved as grayscale_output.jpg\")\n",
     "\n",
     "\n",
+
     "def dominant_color():\n",
     "    if img is None:\n",
     "        messagebox.showerror(\"Error\", \"No image loaded!\")\n",
