Update Mini project1(Jackfruit problem).ipynb

--- a/Mini project1(Jackfruit problem).ipynb
+++ b/Mini project1(Jackfruit problem).ipynb
@@ -50,7 +50,7 @@
     "\n",
     "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "    cv2.imwrite(\"grayscale_output.jpg\", gray)\n",
-    "    messagebox.showinfo(\"Grayscale image saved as grayscale_output.jpg\")\n",
+    "    messagebox.showinfo(\"Saved\",\"Grayscale image saved as grayscale_output.jpg\")\n",
     "\n",
     "\n",
 
