Dominant Colour Function and Update
Made by Akshat Sharma

--- a/Mini project1(Jackfruit problem).ipynb
+++ b/Mini project1(Jackfruit problem).ipynb
@@ -80,8 +80,10 @@
     "\n",
     "    messagebox.showinfo(\n",
     "        \"Dominant Color\",\n",
-    "        f\"Dominant Color (R,G,B): {tuple(dominant)}\",\n",
-    "    )\n"
+    "        f\"Dominant Color (R,G,B): {tuple(int(x) for x in dominant)}\",\n",
+    "    )\n",
+    "\n",
+    "\n",
 ,
     "\n",
     "\n",
