Fix string formatting in messagebox display

--- a/Mini project1(Jackfruit problem).ipynb
+++ b/Mini project1(Jackfruit problem).ipynb
@@ -80,7 +80,7 @@
     "\n",
     "    messagebox.showinfo(\n",
     "        \"Dominant Color\",\n",
-    "        f\"Dominant Color (R,G,B): {tuple(int(x) for x in dominant)}\",\n",
+    "        f\"Dominant Color (R,G,B): {tuple(int(x) for x in dominant)}\"),\n",
     "\n",
     "# ----------------- GUI Setup -----------------\n",
     "root = Tk()\n",
